// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline-code.md with options: {"type":{"inlineCode":false}}: inline-code.md 1`] = `
\`abc123\`

\`我a我1\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`abc123\`

\`我a我1\`

`;

exports[`inline-code.md with options: undefined: inline-code.md 1`] = `
\`abc123\`

\`我a我1\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`abc123\`

\`我 a 我 1\`

`;
